# rttov_operator

./: CLAUDE.md  README.md  config.example.toml  pyproject.toml
rttov_operator/: cli.py  config.py  convert.py  processor.py  rttov_wrapper.py
utils/: wrf_to_cams_dust_mapping.py
