[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rttov_operator"]

[project]
name = "rttov-operator"
version = "0.1.0"
description = "An operator for WRF-Ensembly to generate synthetic satellite imagery using RTTOV"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy",
    "xarray",
    "netCDF4",
    "click",
    "mashumaro[toml]",
    "pvlib",
]

[project.scripts]
rttov-operator = "rttov_operator.cli:main"

